fix(desktop-ui): fix window-sidebar visibility

--- a/packages/desktop-ui/src/components/window/window-content.component.scss
+++ b/packages/desktop-ui/src/components/window/window-content.component.scss
@@ -10,18 +10,11 @@
         position: relative;
         width: 250px;
         flex-shrink: 0;
-        overflow: visible;
+        overflow: hidden;
         border-right: 1px solid var(--dui-line-sidebar);
 
-        .hider {
-            width: 100%;
-            height: 100%;
-            position: relative;
-            overflow: hidden;
-        }
-
         dui-splitter {
-            right: -4px;
+            right: 0;
         }
 
         &.with-animation {
@@ -30,6 +23,11 @@
 
         &.hidden {
             width: 0 !important;
+        }
+
+        &.hidden .sidebar-container,
+        &.with-animation .sidebar-container {
+            max-width: unset;
         }
     }
 
